networking/odoo-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  labels:
    app: odoo
  namespace: default
spec:
  selector:
    app: odoo
  ports:
    - name: http-odoo
      port: 8069
      targetPort: 8069
    - name: http-longpolling
      port: 8072
      targetPort: 8072
