networking/istio-networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-autogenerated-k8s-ingress # We use the istio special gateway name for K8s ingress
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-default
        protocol: HTTP2
      tls:
        httpsRedirect: true
      hosts:
        - "*"

    - port:
        number: 443
        name: https-default
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "odoo-tls-cert"
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
        cipherSuites:
          - "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384"
          - "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384"
          - "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256"
          - "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256"
      hosts:
        - "*.gdgsd19.do"
        - "gdgsd19.do"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odoo12-service
spec:
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  hosts:
    - "gdgsd19.do"
  http:
    - match:
        - uri:
            prefix: "/longpolling"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: v12
            port:
              number: 8072
      websocketUpgrade: true
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: v12
            port:
              number: 8069
      websocketUpgrade: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odoo11-service
spec:
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  hosts:
    - "demo11.gdgsd19.do"
  http:
    - match:
        - uri:
            prefix: "/longpolling"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: v11
            port:
              number: 8072
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: v11
            port:
              number: 8069
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odoo11-ops-service
spec:
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  hosts:
    - "manager11.gdgsd19.do"
  http:
    - match:
        - uri:
            prefix: "/longpolling"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: opsv11
            port:
              number: 8072
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: opsv11
            port:
              number: 8069
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odoo12-ops-service
spec:
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  hosts:
    - "andromeda.gdgsd19.do"
  http:
    - match:
        - uri:
            prefix: "/longpolling"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: opsv12
            port:
              number: 8072
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: odoo-service.default.svc.cluster.local
            subset: opsv12
            port:
              number: 8069
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: odoo-destinationrule
spec:
  host: odoo-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v11
      labels:
        environment: prod
        branch: "11.0"
    - name: v12
      labels:
        environment: prod
        branch: "12.0"
    - name: v13
      labels:
        environment: prod
        branch: "13.0"
    - name: master
      labels:
        environment: test
        branch: "master"
    - name: opsv11
      labels:
        environment: ops
        branch: "11.0"
    - name: opsv12
      labels:
        environment: ops
        branch: "12.0"
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gateway-gzip
spec:
  filters:
    - listenerMatch:
        listenerType: GATEWAY
        listenerProtocol: HTTP
      filterName: envoy.gzip
      filterType: HTTP
      filterConfig:
        inlineCode: |
          compression_level: BEST
